--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" rel="stylesheet">
 </head>
 <body>
-    <main>
+    <header>
         <section class="box-image">
             <img src="240967.jpg" alt="Image">
         </section>
@@ -21,8 +21,8 @@
                 <i class="fab fa-whatsapp"></i>
                 تواصل معي   
             </button>
-    </section>
-    </main>
+        </section>
+    </header>
     <script>
         let whatsappBtn= document.getElementById('whatsappBtn');
         whatsappBtn.addEventListener('click', function() {
