--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" rel="stylesheet">
 </head>
 <body>
-    <header>
+    <main class="container">
         <section class="box-image">
             <img src="240967.jpg" alt="Image">
         </section>
@@ -22,7 +22,7 @@
                 تواصل معي   
             </button>
         </section>
-    </header>
+    </main>
     <script>
         let whatsappBtn= document.getElementById('whatsappBtn');
         whatsappBtn.addEventListener('click', function() {
