--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     <div class="container">
-        <section class="box-image">
+        <div class="box-image">
             <img src="240967.jpg" alt="Image">
-        </section>
-        <section class="main-text">
+        </div>
+        <div class="main-text">
             <h2>ضمان ذهبي الى نهاية الاشتراك</h2>
             <p> اشتراك فالكون
                 الاشتراك الاقوى في الوطن العربي</p>
@@ -21,7 +21,7 @@
                 <i class="fab fa-whatsapp"></i>
                 تواصل معي   
             </button>
-        </section>
+        </div>
     </div>
     <script>
         let whatsappBtn= document.getElementById('whatsappBtn');
